--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "lodash.camelcase": "^4.3.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.51.1",
     "rollup-plugin-typescript2": "^0.30.0",
