--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
-  "name": "typescript-rollup-starter",
+  "name": "--libraryname--",
   "version": "1.0.0",
-  "types": "build/index.d.ts",
-  "main": "build/typescript-rollup-starter.umd.js",
-  "module": "build/typescript-rollup-starter.es.js",
+  "main": "build/--libraryname--.umd.js",
+  "module": "build/--libraryname--.esm.js",
+  "typings": "build/types/--libraryname--.d.ts",
+  "author": "--username-- <--usermail-->",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
   "files": [
     "build"
   ],
   "scripts": {
     "build": "rimraf build && tsc --emitDeclarationOnly -d && rollup -c",
-    "tsc": "tsc -init"
+    "tsc": "tsc -init",
+    "deploy-docs": "ts-node tools/gh-pages-publish"
   },
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "colors": "^1.4.0",
     "lodash.camelcase": "^4.3.0",
+    "prompt": "^1.1.0",
+    "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.51.1",
     "rollup-plugin-typescript2": "^0.30.0",
+    "shelljs": "^0.8.4",
+    "ts-node": "^10.0.0",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2"
   }
