feat: tsconfig模块解析策略修改

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "moduleResolution": "Node",
     "module":"ESNext",
     "lib": ["ES2015", "ES2016", "ES2017", "DOM"],
     "strict": true,
