--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.51.1",
     "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "shelljs": "^0.8.4",
     "ts-node": "^10.0.0",
     "tslib": "^2.2.0",
