--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "build"
   ],
   "scripts": {
-    "build": "rimraf build && tsc --emitDeclarationOnly -d && rollup -c rollup.config.ts",
+    "build:types": "rimraf build && tsc --emitDeclarationOnly -d",
+    "build:prod": "yarn build:types && rollup -c rollup.config.ts --environment NODE_ENV:prod",
+    "build:test": "yarn build:types && rollup -c rollup.config.ts --environment NODE_ENV:test",
+    "build:dev": "yarn build:types && rollup -c rollup.config.ts --environment NODE_ENV:dev",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "tsc": "tsc -init",
-    "postinstall": "ts-node tools/init",
     "deploy-docs": "ts-node tools/gh-pages-publish"
   },
   "license": "MIT",
@@ -25,6 +27,7 @@
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-replace": "^2.4.2",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "colors": "^1.4.0",
@@ -35,6 +38,7 @@
     "replace-in-file": "^6.2.0",
     "rimraf": "^3.0.2",
     "rollup": "^2.51.1",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.30.0",
     "rollup-plugin-uglify": "^6.0.4",
     "shelljs": "^0.8.4",
