--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "coverage": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "tsc": "tsc -init",
-    "deploy-docs": "ts-node tools/gh-pages-publish",
-    "postinstall": "ts-node tools/init"
+    "deploy-docs": "ts-node tools/gh-pages-publish"
   },
   "license": "MIT",
   "devDependencies": {
@@ -30,11 +29,11 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
+    "@swc/jest": "^0.2.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
     "colors": "^1.4.0",
     "jest": "^27.0.4",
-    "jest-config": "^27.0.4",
     "lodash.camelcase": "^4.3.0",
     "prompt": "^1.1.0",
     "replace-in-file": "^6.2.0",
@@ -48,32 +47,5 @@
     "ts-node": "^10.0.0",
     "tslib": "^2.2.0",
     "typescript": "^4.3.2"
-  },
-  "jest": {
-    "transform": {
-      ".(ts|tsx)": "ts-jest"
-    },
-    "testEnvironment": "node",
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js"
-    ],
-    "coveragePathIgnorePatterns": [
-      "/node_modules/",
-      "/test/"
-    ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 90,
-        "functions": 95,
-        "lines": 95,
-        "statements": 95
-      }
-    },
-    "collectCoverageFrom": [
-      "src/*.{js,ts}"
-    ]
   }
 }
