--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
     "@rollup/plugin-replace": "^2.4.2",
+    "@swc/core": "^1.2.104",
     "@swc/jest": "^0.2.5",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.12.2",
