--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "coverage": "jest -c jest.config.ts --coverage",
     "test:watch": "jest -c jest.config.ts --coverage --watch",
     "tsc": "tsc -init",
-    "deploy-docs": "ts-node tools/gh-pages-publish"
+    "postinstall": "ts-node tools/init"
   },
   "license": "MIT",
   "devDependencies": {
